# aoc

./: 0.go  README.md  lc2042.go  main.go  new.sh  start.go
1/: main.go
1.2/: main.go
13/: main.go
13.2/: main.go
14/: main.go
14.2/: main.go
15/: main.go  test.txt
15.2/: main.go
2022/1.2/: test.txt
2022/10/: main.go
2022/10.2/: main.go
2022/11.2/: main_bigint
2022/12/: main.go
2022/12.2/: main.go
2022/2/: main.go
2022/3.2/: main.go
2022/5/: main.go
2022/6/: main.go
2022/7/: main.go
2022/9.2/: main.go
2022_2023/: README.md  main.go
2022_2023/2023/: main.go
2023/1/: main.go
2023/3a/: main.go  test2.txt
2023/3b/: main.go
2024_2025/: .gitignore  pyproject.toml  template.py  utils.py
2024_2025/2024/: README.md  pyproject.toml  setup_day.py  template.py  test.py  utils.py
2024_2025/2024/days/1/: main.py  main2.py
2024_2025/2024/days/10/: main.py
2024_2025/2024/days/11/: main.py
2024_2025/2024/days/12/: main.py
2024_2025/2024/days/2/: main.py  main2.py
2024_2025/2024/days/3/: main.py  main2.py
2024_2025/2024/days/4/: main.py
2024_2025/2024/days/5/: main.py
2024_2025/2024/days/6/: main.py
2024_2025/2024/days/7/: main.py
2024_2025/2024/days/8/: main.py
2024_2025/2024/days/9/: main.py
2024_2025/2025/days/1/: main.py
2024_2025/2025/days/2/: main.py
2024_2025/2025/days/3/: main.py
2024_2025/2025/days/4/: main.py
2024_2025/2025/days/5/: main.py
2024_2025/2025/days/6/: main.py
2024_2025/2025/days/7/: main.py
2024_2025/2025/days/8/: main.py
2024_2025/2025/days/9/: main.py  main4.py
2024_2025/2025/kamel/: AGENTS.md  README.md
3/: main.go  test.txt
3.2/: test.txt
4/: main.go
4.2/: main.go
5/: test5.txt
5.2/: test5.txt
8/: main.go
8.2/: main.go
9/: main.go
utils/: utils.go
(+18 files in other folders)
