[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]

[tool.basedpyright]
# Type checking mode: "off", "basic", "standard", "strict", "all"
typeCheckingMode = "basic"

# Disable specific diagnostics that are too noisy
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnusedImport = false
reportUnusedVariable = false
reportGeneralTypeIssues = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportArgumentType = false
